# api-contract/swagger.json
@@ -486,6 +486,37 @@
         }
       }
     },
+    "/api/Customs/declarations/return": {
+      "post": {
+        "tags": [
+          "Customs"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateReturnDeclarationCommand"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateReturnDeclarationCommand"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateReturnDeclarationCommand"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/Customs/declarations/waste": {
       "post": {
         "tags": [
@@ -4497,6 +4528,72 @@
         },
         "additionalProperties": false
       },
+      "CreateReturnDeclarationCommand": {
+        "type": "object",
+        "properties": {
+          "declarationNumber": {
+            "type": "string",
+            "nullable": true
+          },
+          "mrn": {
+            "type": "string",
+            "nullable": true
+          },
+          "declarationDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "customsProcedureId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "partnerId": {
+            "type": "string",
+            "format": "uuid",
+            "nullable": true
+          },
+          "currency": {
+            "type": "string",
+            "nullable": true
+          },
+          "totalCustomsValue": {
+            "type": "number",
+            "format": "double"
+          },
+          "senderName": {
+            "type": "string",
+            "nullable": true
+          },
+          "senderAddress": {
+            "type": "string",
+            "nullable": true
+          },
+          "senderCountry": {
+            "type": "string",
+            "nullable": true
+          },
+          "countryOfDispatch": {
+            "type": "string",
+            "nullable": true
+          },
+          "countryOfDestination": {
+            "type": "string",
+            "nullable": true
+          },
+          "specialRemarks": {
+            "type": "string",
+            "nullable": true
+          },
+          "lines": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ReturnLineDto"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "CreateShiftRequest": {
         "type": "object",
         "properties": {
@@ -5135,6 +5232,17 @@
         },
         "additionalProperties": false
       },
+      "LonProcessState": {
+        "enum": [
+          1,
+          6,
+          7,
+          8,
+          9
+        ],
+        "type": "integer",
+        "format": "int32"
+      },
       "MachineRequest": {
         "type": "object",
         "properties": {
@@ -5417,6 +5525,69 @@
           "refreshToken": {
             "type": "string",
             "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "ReturnLineDto": {
+        "type": "object",
+        "properties": {
+          "itemId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "tariffCode": {
+            "type": "string",
+            "nullable": true
+          },
+          "quantity": {
+            "type": "number",
+            "format": "double"
+          },
+          "uoMId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "customsValue": {
+            "type": "number",
+            "format": "double"
+          },
+          "countryOfOrigin": {
+            "type": "string",
+            "nullable": true
+          },
+          "netWeight": {
+            "type": "number",
+            "format": "double",
+            "nullable": true
+          },
+          "grossWeight": {
+            "type": "number",
+            "format": "double",
+            "nullable": true
+          },
+          "calculationMethod": {
+            "type": "string",
+            "nullable": true
+          },
+          "batchNumber": {
+            "type": "string",
+            "nullable": true
+          },
+          "locationId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "sourceMRN": {
+            "type": "string",
+            "nullable": true
+          },
+          "returnQuantity": {
+            "type": "number",
+            "format": "double"
+          },
+          "returnTo": {
+            "$ref": "#/components/schemas/LonProcessState"
           }
         },
         "additionalProperties": false
